[project]
name = "code_ctags"
dynamic = ["version"]
description = "output the labels of functions, classes, variables, etc. of all files currently downloaded to the terminal"
authors = [
    {name = "SengMitnick", email = "sengmitnick@163.com"},
]
dependencies = [
    "networkx>=3.2.1",
    "configargparse>=1.7",
    "tqdm>=4.66.1",
    "numpy>=1.25.2",
    "scipy>=1.9.3",
    "pygments>=2.16.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
code_ctags = "code_ctags.main:main"

[tool.pdm]
version = { source = "file", path = "src/code_ctags/__init__.py" }
